<?xml version="1.0"?>
<package format="3">
  <name>sml_nexus_tutorials</name>
  <version>0.0.0</version>
  <description>The sml_nexus_tutorials package</description>

  <maintainer email="smladmin@todo.todo">smladmin</maintainer>
  <license>TODO</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>message_generation</depend>
  <depend>sml_nexus_gazebo</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>custom_msg</depend>

  <!-- Build export dependencies -->
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>sml_nexus_gazebo</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>custom_msg</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sml_nexus_gazebo</exec_depend> 
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>custom_msg</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend> -->

  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
